# depthai-ros

depthai_descriptions/launch/: urdf_launch.py
depthai_descriptions/urdf/: depthai_descr.urdf.xacro
depthai_descriptions/urdf/include/: depthai_macro.urdf.xacro
f1tenth_detection_cpp/: CMakeLists.txt  package.xml
f1tenth_detection_cpp/launch/: f1tenth_speed_detection.launch.py
f1tenth_detection_cpp/msg/: SpeedDistance.msg
f1tenth_detection_cpp/resources/: best.json
f1tenth_detection_cpp/src/: f1tenth_speed_detection.cpp
